objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <description>Enter address</description>
        <label>Address</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blood_Group__c</fullName>
        <description>Select Blood group</description>
        <label>Blood Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>B+</fullName>
                </value>
                <value>
                    <fullName>O+</fullName>
                </value>
                <value>
                    <fullName>AB-</fullName>
                </value>
                <value>
                    <fullName>B-</fullName>
                </value>
                <value>
                    <fullName>AB+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>Enter Phone number</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Register_Number__c</fullName>
        <description>Enter Reg Num</description>
        <label>Register Number</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>sample</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Phone_Number__c )</errorConditionFormula>
        <errorMessage>Phone number can&apos;t be empty</errorMessage>
    </validationRules>
</CustomObject>